# mail_to_misp

./: .gitignore  .gitmodules  .travis.yml  Pipfile  README.md  fake_smtp.py  fake_smtp_config.py-example  mail_to_misp.py  mail_to_misp_config.py-example  mail_to_misp_forward.py  mail_to_misp_o365.py  pyproject.toml  reqirements.txt  requirements.txt  setup.py  thunderbird_wrapper.sh  urlmarker.py
.github/workflows/: codeql.yml
MUA/Apple/Mail/: MISP Mail Rule Action.scptd  MISP Mail Rule Action.txt
MUA/Microsoft/Office365/: README.md
MUA/Mozilla/Thunderbird/: thunderbird_wrapper.sh
mail2misp/: __init__.py  hashmarker.py  mail2misp.py  urlmarker.py
tests/: config_carrier.py  config_forward.py  config_spamtrap.py  tests.py
