[tool.poetry]
name = "mail2misp"
version = "0.1.0"
description = "Importer of EML files into a MISP instance"
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "AGPL-3.0"
repository = "https://github.com/MISP/mail_to_misp"

readme = "README.md"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/MISP/mail_to_misp/issues"
"Source" = "https://github.com/MISP/mail_to_misp"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.0"
python-dateutil = "^2.8.1"
jsonschema = "^3.2.0"
deprecated = "^1.2.10"
dnspython = "^2.1"
defang = "^0.5.3"
extract_msg = {version = "^0.28.0", optional = true}
RTFDE = {version = "^0.0.2", optional = true}
oletools = {version = "^0.56", optional = true}
python-magic = {version = "^0.4.18", optional = true}
pydeep = {version = "^0.4", optional = true}
lief = {version = "^0.11.4", optional = true}
beautifulsoup4 = {version = "^4.9.3", optional = true}
validators = {version = "^0.18.1", optional = true}
sphinx-autodoc-typehints = {version = "^1.11.1", optional = true}
recommonmark = {version = "^0.7.1", optional = true}
reportlab = {version = "^3.5.55", optional = true}
pyfaup = {version = "^1.2", optional = false}
urllib3 = {extras = ["brotli"], version = "^1.26.3", optional = true}
pymisp = "^2.4.148.1"
flask = "^1.1.2"
flask-bootstrap = "^3.3.7"
gunicorn = "^20.0.4"
chardet = "^4.0.0"
aiosmtpd = "^1.4.2"

[tool.poetry.extras]
fileobjects = ['python-magic', 'pydeep', 'lief']
openioc = ['beautifulsoup4']
virustotal = ['validators']
docs = ['sphinx-autodoc-typehints', 'recommonmark']
pdfexport = ['reportlab']
url = ['pyfaup']
email = ['extract_msg', "RTFDE", "oletools"]
brotli = ['urllib3']

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
coveralls = "^3.0.0"
codecov = "^2.1.10"
requests-mock = "^1.8.0"
mypy = "^0.910"
flake8 = "^3.8.4"
ipython = "^7.16.1"
jupyterlab = "^2.2.9"
# jedi 0.18.0 breaks ipython
jedi = "<0.18.0"

[build-system]
requires = ["poetry_core>=1.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
