[tool.poetry]
name = "mail2misp"
version = "0.1.0"
description = "Importer of EML files into a MISP instance"
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "AGPL-3.0"
repository = "https://github.com/MISP/mail_to_misp"

readme = "README.md"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/MISP/mail_to_misp/issues"
"Source" = "https://github.com/MISP/mail_to_misp"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
jsonschema = "^4.19.0"
deprecated = "^1.2.14"
dnspython = "^2.4.2"
defang = "^0.5.3"
extract_msg = {version = "^0.40.0", optional = true}
RTFDE = {version = "^0.0.2", optional = true}
oletools = {version = "^0.60.1", optional = true}
python-magic = {version = "^0.4.27", optional = true}
pydeep = {version = "^0.4", optional = true}
lief = {version = "^0.13.2", optional = true}
beautifulsoup4 = {version = "<4.12.0", optional = true}
validators = {version = "^0.20.0", optional = true}
sphinx-autodoc-typehints = {version = "^1.24.0", optional = true}
recommonmark = {version = "^0.7.1", optional = true}
reportlab = {version = "^3.6.13", optional = true}
pyfaup = {version = "^1.2", optional = false}
urllib3 = {extras = ["brotli"], version = "^1.26.16", optional = true}
pymisp = "^2.4.174"
flask = "^2.3.2"
flask-bootstrap = "^3.3.7.1"
gunicorn = "^20.1.0"
chardet = "^5.2.0"
aiosmtpd = "^1.4.4.post2"

[tool.poetry.extras]
fileobjects = ['python-magic', 'pydeep', 'lief']
openioc = ['beautifulsoup4']
virustotal = ['validators']
docs = ['sphinx-autodoc-typehints', 'recommonmark']
pdfexport = ['reportlab']
url = ['pyfaup']
email = ['extract_msg', "RTFDE", "oletools"]
brotli = ['urllib3']

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
coveralls = "^3.3.1"
codecov = "^2.1.13"
requests-mock = "^1.11.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"
ipython = [
    {version = "<8.13.0", python = "<3.9"},
    {version = "^8.13.0", python = ">=3.9"}
]
jupyterlab = "^3.6.5"

[build-system]
requires = ["poetry_core>=1.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
